<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/tab_dashboard" />
    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/tab_chat" />
    <item
        android:id="@+id/nav_devices"
        android:icon="@drawable/ic_devices"
        android:title="@string/tab_devices" />
    <item
        android:id="@+id/nav_approvals"
        android:icon="@drawable/ic_approvals"
        android:title="@string/tab_approvals" />
    <item
        android:id="@+id/nav_observatory"
        android:icon="@drawable/ic_observatory"
        android:title="@string/tab_observatory" />
</menu>
