<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            style="@style/D88.SectionTitle"
            android:text="@string/security_title" />

        <TextView
            android:id="@+id/sec_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp" />

        <TextView
            style="@style/D88.SectionTitle"
            android:layout_marginTop="16dp"
            android:text="@string/privacy_title" />

        <TextView
            android:id="@+id/sec_privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp" />

        <TextView
            style="@style/D88.SectionTitle"
            android:layout_marginTop="16dp"
            android:text="@string/matrix_title" />

        <TextView
            android:id="@+id/sec_matrix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp" />
    </LinearLayout>
</ScrollView>
